--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -467,7 +467,7 @@ select.form-control {
   margin-bottom: 0.5rem;
   font-weight: 700;
 
-  @include media-breakpoint-down('md') {
+  @media (--min-pgn-size-breakpoint-md) {
     line-height: 1.5rem;
     font-size: 1.125rem;
   }
